Add map upload and sync

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -50,6 +50,13 @@
         <!-- Кнопки управления токенами -->
         <button id="deleteToken">Удалить токен</button>
         <button id="clearBoard">Очистить поле</button>
+
+        <div id="mapControls" class="map-section">
+          <h4>Карты</h4>
+          <input type="file" id="mapFile" accept="image/*" />
+          <button id="uploadMap">Загрузить карту</button>
+          <div id="mapList"></div>
+        </div>
       </aside>
 
       <!-- Центральная игровая доска -->
