Add collaborative drawing tools

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -51,6 +51,16 @@
         <button id="deleteToken">Удалить токен</button>
         <button id="clearBoard">Очистить поле</button>
 
+        <div class="draw-section">
+          <h4>Рисование</h4>
+          <input type="color" id="drawColor" value="#ff0000" />
+          <input type="number" id="brushSize" value="4" min="1" max="50" />
+          <button id="brushTool">Кисть</button>
+          <button id="eraserTool">Ластик</button>
+          <button id="undoDraw">Назад</button>
+          <button id="redoDraw">Вперед</button>
+        </div>
+
         <div id="mapControls" class="map-section">
           <h4>Карты</h4>
           <input type="file" id="mapFile" accept="image/*" style="display:none" />
