Add pointer tool to exit drawing mode

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -55,6 +55,7 @@
           <h4>Рисование</h4>
           <input type="color" id="drawColor" value="#ff0000" />
           <input type="number" id="brushSize" value="4" min="1" max="50" />
+          <button id="pointerTool">Курсор</button>
           <button id="brushTool">Кисть</button>
           <button id="eraserTool">Ластик</button>
           <button id="undoDraw">Назад</button>
